--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/company_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/company_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sidenavigation.Logout"></activity>
+        <activity android:name=".DashBoard"></activity>
+        <activity android:name=".LoginAcitivity" />
+        <activity android:name=".sidenavigation.Logout" />
         <activity android:name=".sidenavigation.Share" />
         <activity android:name=".sidenavigation.ReportAnIssue" />
         <activity android:name=".sidenavigation.AboutCompany" />
